we've got a window here, and keypress to quit, wow